# to-do

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-04-26T12-20-03-666Z.yml  page-2026-04-26T12-21-28-614Z.yml  page-2026-04-26T12-21-45-927Z.yml  page-2026-04-26T12-21-56-155Z.yml  page-2026-04-26T12-22-36-675Z.yml  page-2026-04-26T12-22-45-334Z.yml  page-2026-04-26T12-23-00-647Z.yml  page-2026-04-26T12-23-14-614Z.yml  page-2026-04-26T12-23-30-301Z.yml  page-2026-04-26T12-23-46-620Z.yml  page-2026-04-26T12-23-59-370Z.yml  page-2026-04-26T12-24-09-544Z.yml  page-2026-04-26T12-24-30-565Z.yml  page-2026-04-26T12-24-46-314Z.yml  page-2026-04-26T12-24-58-442Z.yml  page-2026-04-26T12-25-24-313Z.yml  page-2026-04-26T12-25-43-966Z.yml  page-2026-04-26T12-26-01-694Z.yml  page-2026-04-26T12-26-10-658Z.yml  page-2026-04-26T12-26-24-403Z.yml  page-2026-04-26T12-26-28-970Z.yml  page-2026-04-26T12-26-35-533Z.yml  page-2026-04-26T12-33-24-113Z.yml  page-2026-04-26T12-35-46-905Z.yml  page-2026-04-26T12-37-19-135Z.yml  page-2026-04-26T12-39-31-832Z.yml  page-2026-04-26T12-40-59-442Z.yml  page-2026-04-26T12-41-34-916Z.yml  page-2026-04-26T12-44-16-308Z.yml  page-2026-04-26T12-44-26-141Z.yml  page-2026-04-26T12-44-32-736Z.yml  page-2026-04-26T12-45-05-478Z.yml  page-2026-04-26T12-56-30-516Z.yml  page-2026-04-26T12-57-12-632Z.yml  page-2026-04-26T12-58-19-936Z.yml  page-2026-04-26T12-58-42-573Z.yml  page-2026-04-26T12-58-53-892Z.yml  page-2026-04-26T12-59-40-324Z.yml  page-2026-04-26T12-59-57-934Z.yml  page-2026-04-26T13-00-28-962Z.yml  (+38 more)
config/: logging_utils.py  middleware.py  otel.py  otel_config.py  settings.py  urls.py
(+32 files in other folders)
